fix: bug in delivery requests for customer
